--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -6,8 +6,8 @@ default: &default
   password:  <%= ENV['DATABASE_PASSWORD'] %>
   encoding:  utf8mb4
   charset:   utf8mb4
-  collation: utf8mb4_unicode_520_ci
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  collation: <%= ENV['DATABASE_COLLATION'] || 'utf8mb4_unicode_520_ci' %>
+  pool: <%= ENV['RAILS_MAX_THREADS'] || 5 %>
   port: <%= ENV['DATABASE_PORT'] || 3306 %>
 
 development:
@@ -15,10 +15,7 @@ development:
 
 test:
   <<: *default
-  host: <%= ENV['TEST_DATABASE_HOST'] || '127.0.0.1' %>
-  username: app
-  password: app
-  database: app_test
+  host: <%= ENV['TEST_DATABASE_HOST'] || ENV['DATABASE_HOST'] || '127.0.0.1' %>
 
 production:
   <<: *default
