--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_USER: app
       MYSQL_PASSWORD: app
-      MYSQL_DATABASE: app_development
+      MYSQL_DATABASE: app
       TZ: UTC
     ports:
       - '13306:3306'
@@ -29,7 +29,7 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_USER: app
       MYSQL_PASSWORD: app
-      MYSQL_DATABASE: app_test
+      MYSQL_DATABASE: app
       TZ: UTC
     expose:
       - '3306'
@@ -47,6 +47,9 @@ services:
       DISABLE_SPRING: 1
       DATABASE_HOST: mysql-development
       DATABASE_NAME: app_development
+      DATABASE_USERNAME: app
+      DATABASE_PASSWORD: app
+      DATABASE_COLLATION: utf8mb4_bin
       TEST_DATABASE_HOST: mysql-test
       REDIS_URL: redis://redis:6379
       HISTFILE: /var/lib/app/log/sh_history
@@ -63,7 +66,6 @@ services:
     command: bin/server
     ports:
       - '13000:3000'
-      - '8080:8080'
     volumes:
       - .:/var/lib/app:cached
       - bundle-data:/var/lib/app/vendor/bundle:cached
